--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,44 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="document-outline"></ion-icon>
+        Formatos
+      </ion-button>
+      <ion-button>
+        <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
+        Convocatorias
+      </ion-button>
+      <ion-button>
+        <ion-icon slot="icon-only" name="people-circle-outline"></ion-icon>
+        Convenios
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card class="login-card">
+    <ion-card-content>
+      <div class="logo-container">
+        <img src="/assets/logos/logo_empresa.png" alt="Logo" class="logo">
+      </div>
+      <form class="login-form">
+        <h1 class="titulo">Iniciar Sesión</h1>
+        <ion-item>
+          <ion-label position="floating">Usuario</ion-label>
+          <ion-input type="text" class="ion-text-center"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Contraseña</ion-label>
+          <ion-input type="password" class="ion-text-center"></ion-input>
+        </ion-item>
+        <ion-button expand="full" shape="round" color="primary">
+          Iniciar Sesión
+        </ion-button>
+      </form>    
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
