--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -16,12 +15,23 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
 #container a {
   text-decoration: none;
+}
+
+.logo {
+  width: 100%; 
+  max-width: 450px;
+  height: auto; 
+  margin: 0 auto; 
+  display: block; 
+}
+
+.titulo{
+  text-align: center;
+  color: blue;
 }
