pantalla login, crud esqueleto

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-header-centered">
   <ion-toolbar>
-    <ion-buttons slot="end">
+    <ion-buttons class="iconos">
       <ion-button (click)="verFormatos()">
         <ion-icon slot="icon-only" name="document-outline"></ion-icon>
         Formatos
@@ -17,7 +17,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
+
+<ion-content [fullscreen]="true" class="ion-padding login-content">
 
   <ion-card class="login-card">
     <ion-card-content>
