--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -31,7 +31,63 @@
   display: block; 
 }
 
-.titulo{
+
+
+ion-header {
   text-align: center;
-  color: blue;
+  align-items: center;
+}
+
+ion-buttons.iconos {
+  display: flex;
+  justify-content: center;
+}
+
+
+.iconos{
+  text-align: center;
+}
+
+ion-content.login-content {
+  background-color: #d33737;
+  padding: 20px;
+}
+
+.login-card {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  background-color: rgb(183, 197, 209);
+}
+
+.login-form {
+  margin-top: 20px;
+
+}
+
+.titulo {
+  text-align: center;
+  font-size: 20px;
+  color: #111aa0;
+  margin-bottom: 20px;
+}
+
+ion-item {
+  margin-bottom: 20px;
+}
+
+ion-input {
+  text-align: center;
+  width: 100%;
+  color: #080606;
+  background-color: rgb(64, 87, 109);
+
+}
+
+ion-button {
+  margin-top: 20px;
+  width: 100%;
+  color: #fff;
 }
