--- a/src/app/pages/paneladmin/paneladmin.page.html
+++ b/src/app/pages/paneladmin/paneladmin.page.html
@@ -1,13 +1,39 @@
+<ion-menu side="start" contentId="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menú</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item (click)="formAgremiado()" class="cursor">
+        Agregar Agremiado
+      </ion-item>
+      <ion-item (click)="verAgremiado()" class="cursor">
+        Ver Agremiado
+      </ion-item>
+      <ion-item (click)="verSolicitud()" class="cursor">
+        Ver Solicitudes
+      </ion-item>
+      <ion-item (click)="enviarAviso()" class="cursor">
+        Enviar Avisos
+      </ion-item>
+      <ion-item (click)="enviarAviso()" class="cursor">
+        Cerrar Sesión
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>paneladmin</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Panel de Administrador</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">paneladmin</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class="ion-padding" id="main-content">
+
 </ion-content>
