--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,6 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content [fullscreen]="true" class="ion-padding login-content">
 
   <ion-card class="login-card">
@@ -25,20 +24,23 @@
       <div class="logo-container">
         <img src="/assets/logos/logo_empresa.png" alt="Logo" class="logo">
       </div>
-      <form class="login-form">
+      <!-- Corrección: Usar [formGroup] en lugar de formGroup -->
+      <form [formGroup]="loginForm" class="login-form">
         <h1 class="titulo">Iniciar Sesión</h1>
         <ion-item>
           <ion-label position="floating">Usuario</ion-label>
-          <ion-input type="text" class="ion-text-center"></ion-input>
+          <!-- Corrección: Usar formControlName en lugar de name -->
+          <ion-input formControlName="name" type="text" class="ion-text-center"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Contraseña</ion-label>
-          <ion-input type="password" class="ion-text-center"></ion-input>
+          <!-- Corrección: Usar formControlName en lugar de password -->
+          <ion-input formControlName="password" type="password" class="ion-text-center"></ion-input>
         </ion-item>
         <ion-button expand="full" shape="round" color="primary" (click)="login()">
           Iniciar Sesión
         </ion-button>
-      </form>    
+      </form>
     </ion-card-content>
   </ion-card>
 
