--- a/src/app/pages/paneladmin/paneladmin.page.html
+++ b/src/app/pages/paneladmin/paneladmin.page.html
@@ -4,21 +4,27 @@
       <ion-title>Menú</ion-title>
     </ion-toolbar>
   </ion-header>
+  
   <ion-content>
     <ion-list>
-      <ion-item (click)="formAgremiado()" class="cursor">
+      <ion-item (click)="formAgremiado()" class="cursor" >
+        <ion-icon name="add" aria-hidden="true" slot="start"></ion-icon>
         Agregar Agremiado
       </ion-item>
       <ion-item (click)="verAgremiado()" class="cursor">
+        <ion-icon name="eye" aria-hidden="true" slot="start"></ion-icon>
         Ver Agremiado
       </ion-item>
       <ion-item (click)="verSolicitud()" class="cursor">
+        <ion-icon name="attach" aria-hidden="true" slot="start"> </ion-icon>
         Ver Solicitudes
       </ion-item>
       <ion-item (click)="enviarAviso()" class="cursor">
+        <ion-icon name="send" aria-hidden="true" slot="start"></ion-icon>
         Enviar Avisos
       </ion-item>
       <ion-item (click)="enviarAviso()" class="cursor">
+        <ion-icon name="close" aria-hidden="true" slot="start"></ion-icon>
         Cerrar Sesión
       </ion-item>
     </ion-list>
@@ -26,11 +32,11 @@
 </ion-menu>
 
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Panel de Administrador</ion-title>
+    <ion-title class="ion-text-center">Panel de Administrador</ion-title>
   </ion-toolbar>
 </ion-header>
 
