creada card que muestra agremiados

--- a/src/app/components/veragremiado/veragremiado.component.html
+++ b/src/app/components/veragremiado/veragremiado.component.html
@@ -1,5 +1,17 @@
-<!-- tu-componente.component.html -->
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/panelad"></ion-back-button>
+    </ion-buttons>
+    <ion-title>
+      Agremiados
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 
+<ion-content>
+  <ion-card>
+    
 <table>
   <thead>
     <tr>
@@ -34,3 +46,6 @@
     </tr>
   </tbody>
 </table>
+
+  </ion-card>
+</ion-content>
