--- a/src/app/components/veragremiado/veragremiado.component.html
+++ b/src/app/components/veragremiado/veragremiado.component.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="success">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/panelad"></ion-back-button>
     </ion-buttons>
@@ -9,43 +9,60 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="dark">
   <ion-card>
-    
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Apellido Paterno</th>
-      <th>Apellido Materno</th>
-      <th>NUE</th>
-      <th>NUP</th>
-      <th>RFC</th>
-      <th>NSS</th>
-      <th>Fecha de Nacimiento</th>
-      <th>Teléfono</th>
-      <th>Cuota</th>
-      <th>Género</th>
-      <!-- Agrega más columnas según sea necesario -->
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let agremiado of agremiados">
-      <td>{{ agremiado.nombre }}</td>
-      <td>{{ agremiado.apellido_p }}</td>
-      <td>{{ agremiado.apellido_m }}</td>
-      <td>{{ agremiado.NUE }}</td>
-      <td>{{ agremiado.NUP }}</td>
-      <td>{{ agremiado.RFC }}</td>
-      <td>{{ agremiado.NSS }}</td>
-      <td>{{ agremiado.fecha_nacimiento }}</td>
-      <td>{{ agremiado.telefono }}</td>
-      <td>{{ agremiado.cuota }}</td>
-      <td>{{ agremiado.id_genero }}</td>
-      <!-- Agrega más celdas según sea necesario -->
-    </tr>
-  </tbody>
-</table>
+    <ion-card-content>
 
+      <div class="table-container">
+        <table class="responsive-table">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Apellido Paterno</th>
+              <th>Apellido Materno</th>
+              <th>NUE</th>
+              <th>NUP</th>
+              <th>RFC</th>
+              <th>NSS</th>
+              <th>Fecha de Nacimiento</th>
+              <th>Teléfono</th>
+              <th>Cuota</th>
+              <th>Género</th>
+              <th>Rol</th>
+              <!-- Add more columns as needed -->
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let agremiado of agremiados">
+              <td>{{ agremiado.nombre }}</td>
+              <td>{{ agremiado.apellido_p }}</td>
+              <td>{{ agremiado.apellido_m }}</td>
+              <td>{{ agremiado.NUE }}</td>
+              <td>{{ agremiado.NUP }}</td>
+              <td>{{ agremiado.RFC }}</td>
+              <td>{{ agremiado.NSS }}</td>
+              <td>{{ agremiado.fecha_nacimiento }}</td>
+              <td>{{ agremiado.telefono }}</td>
+              <td>{{ agremiado.cuota }}</td>
+              <td>
+                <!-- Utiliza un *ngFor para encontrar el género correspondiente -->
+                <ng-container *ngFor="let genero of generos">
+                  <ng-container *ngIf="agremiado.id_genero === genero.id">
+                    {{ genero.genero }}
+                  </ng-container>
+                </ng-container>
+              <td>
+              <ng-container *ngFor="let rol of roles">
+                <ng-container *ngIf="agremiado.id_rol === rol.id">
+                  {{ rol.rol }}
+                </ng-container>
+              </ng-container>
+            </td>              
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </ion-card-content>
   </ion-card>
 </ion-content>
