--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -46,6 +46,7 @@ ion-buttons.iconos {
 
 .iconos{
   text-align: center;
+  color: #11a011;
 }
 
 ion-content.login-content {
@@ -59,7 +60,7 @@ ion-content.login-content {
   margin: 0 auto;
   padding: 20px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  background-color: rgb(183, 197, 209);
+  background-color: rgb(152, 247, 167);
 }
 
 .login-form {
@@ -70,7 +71,7 @@ ion-content.login-content {
 .titulo {
   text-align: center;
   font-size: 20px;
-  color: #111aa0;
+  color: #11a011;
   margin-bottom: 20px;
 }
 
@@ -82,7 +83,7 @@ ion-input {
   text-align: center;
   width: 100%;
   color: #080606;
-  background-color: rgb(64, 87, 109);
+  background-color: rgb(123, 216, 135);
 
 }
 
@@ -91,3 +92,4 @@ ion-button {
   width: 100%;
   color: #fff;
 }
+
