--- a/src/app/pages/paneladmin/paneladmin.page.html
+++ b/src/app/pages/paneladmin/paneladmin.page.html
@@ -23,7 +23,7 @@
         <ion-icon name="send" aria-hidden="true" slot="start"></ion-icon>
         Enviar Avisos
       </ion-item>
-      <ion-item (click)="enviarAviso()" class="cursor">
+      <ion-item (click)="cerrarSesion()" class="cursor">
         <ion-icon name="close" aria-hidden="true" slot="start"></ion-icon>
         Cerrar Sesión
       </ion-item>
