--- a/src/app/components/veragremiado/veragremiado.component.html
+++ b/src/app/components/veragremiado/veragremiado.component.html
@@ -29,7 +29,6 @@
               <th>Cuota</th>
               <th>Género</th>
               <th>Rol</th>
-              <!-- Add more columns as needed -->
             </tr>
           </thead>
           <tbody>
@@ -45,7 +44,6 @@
               <td>{{ agremiado.telefono }}</td>
               <td>{{ agremiado.cuota }}</td>
               <td>
-                <!-- Utiliza un *ngFor para encontrar el género correspondiente -->
                 <ng-container *ngFor="let genero of generos">
                   <ng-container *ngIf="agremiado.id_genero === genero.id">
                     {{ genero.genero }}
@@ -57,6 +55,15 @@
                   {{ rol.rol }}
                 </ng-container>
               </ng-container>
+            </td>
+            <td>
+              <!-- Botones de acciones -->
+              <ion-button (click)="editarAgremiado()" fill="clear">
+                <ion-icon slot="icon-only" name="create" color="primary"></ion-icon>
+              </ion-button>
+              <ion-button fill="clear" (click)="eliminarAgremiado()">
+              <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+              </ion-button>
             </td>              
           </tr>
           </tbody>
