--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,31 +17,34 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding login-content" color="dark">
+<ion-content color="dark">
 
-  <ion-card class="login-card">
-    <ion-card-content>
-      <div class="logo-container">
-        <img src="/assets/logos/logo_empresa.png" alt="Logo" class="logo">
+
+
+<div id="form-ui">
+  <form [formGroup]="loginForm" >
+    <div id="form-body">
+      <div id="welcome-lines">
+        <div id="welcome-line-1">Agremiados</div>
+        <div id="welcome-line-2">Sea Usted Bienvenido</div>
       </div>
-      <!-- Corrección: Usar [formGroup] en lugar de formGroup -->
-      <form [formGroup]="loginForm" class="login-form">
-        <h1 class="titulo">Iniciar Sesión</h1>
-        <ion-item>
-          <ion-label position="floating">Usuario</ion-label>
-          <!-- Corrección: Usar formControlName en lugar de name -->
-          <ion-input formControlName="name" type="text" class="ion-text-center" ></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <!-- Corrección: Usar formControlName en lugar de password -->
-          <ion-input formControlName="password" type="password" class="ion-text-center"></ion-input>
-        </ion-item>
-        <ion-button expand="full" shape="round" color="success" (click)="login()">
-          Iniciar Sesión
-        </ion-button>
-      </form>
-    </ion-card-content>
-  </ion-card>
+      <div id="input-area">
+        <div class="form-inp">
+          <input placeholder="Username" type="text" formControlName="name" >
+        </div>
+        <div class="form-inp">
+          <div style="display: flex; flex-direction: row-reverse; align-items: start;">
+            <input placeholder="Password" [type]="showPassword ? 'text' : 'password'" formControlName="password">
+            <ion-icon (click)="togglePasswordVisibility()" name="{{ showPassword ? 'eye-off' : 'eye' }}" slot="end"></ion-icon>
+          </div>
+        </div>        
+      <div id="submit-button-cvr">
+        <button id="submit-button" type="submit" (click)="login()">Login</button>
+      </div>
+      <div id="bar"></div>
+    </div>
+    </div>
+  </form>
+  </div>
 
 </ion-content>
